# oslab2

./: CMakeLists.txt  Makefile  README.md  aux_files.tgz  blah.txt  chop_line.c  chop_line.h  file  file.txt  less  ls  simsh1  simsh1.c  simsh2  simsh2.c  simsh3  simsh3.c  write-up.txt
aux_files/: chop_line.c  chop_line.h
simsh1.dSYM/Contents/: Info.plist
simsh1.dSYM/Contents/Resources/DWARF/: simsh1
simsh2.dSYM/Contents/: Info.plist
simsh2.dSYM/Contents/Resources/DWARF/: simsh2
simsh3.dSYM/Contents/: Info.plist
simsh3.dSYM/Contents/Resources/DWARF/: simsh3
